fix: projects spacing

--- a/themes/jsonresume-theme-teon-parsable-1/style.css
+++ b/themes/jsonresume-theme-teon-parsable-1/style.css
@@ -144,6 +144,16 @@ a:hover {
   margin-bottom: 0;
 }
 
+.projectBlock {
+  margin-bottom: 2px;
+}
+
+.projects .separator {
+  height: 0;
+  margin-top: 1px;
+  margin-bottom: 1px;
+}
+
 /* Separators */
 .separator {
   height: 1px;
